# bibliography_formatter

./: .gitignore  README.md  author.py  author_formatter.py  bibliography.py  bibliography_manager.py  citation_style.py  gui.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-ci.yml
tests/: __init__.py  test_basic.py
